--- a/tarea2/nbproject/private/private.properties
+++ b/tarea2/nbproject/private/private.properties
@@ -1,2 +1,8 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\aceb3\\AppData\\Roaming\\NetBeans\\14\\build.properties
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=/home/pregrado/alejara2021/.netbeans/12.5/build.properties
