--- a/tarea2/nbproject/project.properties
+++ b/tarea2/nbproject/project.properties
@@ -81,7 +81,7 @@ main.class=tarea2.Tarea2
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_11
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
